// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: TextCounter renders 1`] = `
<View
  style={
    {
      "alignSelf": "flex-end",
      "flexDirection": "row",
      "marginTop": 4,
    }
  }
>
  <Text
    style={
      [
        [
          {
            "color": "#25282D",
          },
          {
            "fontFamily": "Poppins-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 16,
            "textAlign": "left",
          },
        ],
        {
          "color": "#878787",
        },
      ]
    }
  >
    11/100
  </Text>
</View>
`;

exports[`component: TextCounter renders maxChar reached 1`] = `
<View
  style={
    {
      "alignSelf": "flex-end",
      "flexDirection": "row",
      "marginTop": 4,
    }
  }
>
  <Text
    style={
      [
        [
          {
            "color": "#25282D",
          },
          {
            "fontFamily": "Poppins-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 16,
            "textAlign": "left",
          },
        ],
        {
          "color": "#FD565F",
        },
      ]
    }
  >
    11/10
  </Text>
</View>
`;
